log
Fri 09 Sep 2022 12:19:45 PM UTC: 
 tests:  0|6
total_score: 0/70
fcaff0c
Fri 09 Sep 2022 12:26:59 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:15: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |     map->size = NULL;
      |               ^
hashmap.c:59:18: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   59 |     map->current = NULL;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
0d25e0b
